change GPG to PGP for consistency

--- a/about/index.html
+++ b/about/index.html
@@ -27,7 +27,7 @@ title: Contact
             <li><i class="fa fa-envelope fa-fw"></i> Email: <a href="mailto:{{site.contact.email}}">{{site.contact.email}}</a>
           </ul>
           <p>
-            <em>You could use my <a href="/drewrwilson_public_key.asc">GPG public key</a> to encrypt your messages.</em>
+            <em>You could use my <a href="/drewrwilson_public_key.asc">PGP public key</a> to encrypt your messages.</em>
           </p>
 
         </div>
