--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@ layout: default
   <div class="grid">
 
     <ul class="entries">
-      {% for post in site.categories['featuredprojects'] limit:4 %}
-
+      {% for post in site.categories['projects'] %}
+      {% if post.featured == true %}
 
       <li class="col-1-2">
         <a href="{{ site.baseurl }}{{ post.url }}">
@@ -43,7 +43,7 @@ layout: default
           <h3>{{ post.title }}</h3>
         </a>
       </li>
-
+      {% endif %}
       {% endfor %}
     </ul>
 
