--- a/fabacademy/index.html
+++ b/fabacademy/index.html
@@ -1,6 +1,7 @@
 ---
 layout: default
 title: Work
+tag: fabacademy
 ---
 </div>
 <img src="/assets/img/blog/fab-academy-thumbnail.jpg" alt="" class="pull-right" />
@@ -19,7 +20,13 @@ title: Work
       <h2>Writing</h2>
       <p>
         <ul>
-          <li><a href="https://drewrwilson.com/blog/starting-fabacademy/">Learning how to make everything with digital fabrication</a> <em>(Feb 1, 2016)</em></li>
+          {% for post in site.categories['blog'] %}
+          {% for tag in post.tags %}
+          {% if tag == page.tag %}
+          <li><a href="{{post.url}}">{{post.title}}</a> <em>({{ post.date | date: '%B %d, %Y' }})</em></li>
+          {% endif %}
+          {% endfor %}
+          {% endfor %}
         </ul>
       </p>
       <!-- <h2>Projects:</h2>
