--- a/fabacademy/index.html
+++ b/fabacademy/index.html
@@ -15,7 +15,7 @@ tag: fabacademy
         <em>January-June 2016</em>
       </p>
       <p>
-        Currently I'm participating in a five-month course in digital fabrication called <a href="http://fabacademy.org">FabAcademy</a>. Each week I am producing a new project and will be sharing photos, writing and step-by-step guides about these projects on this page. As I go through this program, I'll be putting my writing and my projects here on this page.
+        Currently I'm participating in a five-month course in digital fabrication called <a href="http://fabacademy.org">FabAcademy</a>. Each week I am producing a new project and will be sharing photos, writing and step-by-step guides about these projects. As I go through this program, I'll be putting my writing and my projects here on this page.
       </p>
       <h2>Writing</h2>
       <p>
