--- a/fabacademy/index.html
+++ b/fabacademy/index.html
@@ -23,27 +23,34 @@ tag: fabacademy
           {% for post in site.categories['blog'] %}
           {% for tag in post.tags %}
           {% if tag == page.tag %}
+          {% if post.fabcategory == 'writing' %}
           <li><a href="{{post.url}}">{{post.title}}</a> <em>({{ post.date | date: '%B %d, %Y' }})</em></li>
+          {% endif %}
           {% endif %}
           {% endfor %}
           {% endfor %}
         </ul>
       </p>
-      <!-- <h2>Projects:</h2>
+      <h2>Projects:</h2>
       <div class="grid">
 
         <ul class="entries">
-          {% for post in site.categories['projects'] limit:6 %}
+          {% for post in site.categories['blog'] %}
+          {% for tag in post.tags %}
+          {% if tag == page.tag %}
+          {% if post.fabcategory == 'project' %}
           <li class="col-1-3">
             <a href="{{ site.baseurl }}{{ post.url }}">
-              <img src="{{ site.baseurl }}/assets/img/projects/{{ post.thumbnail }}" />
+              <img src="{{ site.baseurl }}/assets/img/{{ post.thumbnail }}" />
               <h3>{{ post.title }}</h3>
             </a>
           </li>
-
+          {% endif %}
+          {% endif %}
+          {% endfor %}
           {% endfor %}
         </ul>
-      </div> -->
+      </div>
 <br />
 <br />
 <br />
