remove mailto for spam prevention

--- a/contact/index.html
+++ b/contact/index.html
@@ -26,7 +26,7 @@ title: Contact
           <ul>
             <li><i class="fa fa-twitter fa-fw"></i> Twitter: <a href="https://twitter.com/{{site.contact.twitter}}">@{{site.contact.twitter}} on Twitter</a>
             <li><i class="fa fa-github fa-fw"></i> Github: <a href="http://github.com/{{site.contact.github}}">{{site.contact.github}} on Github</a>
-            <li><i class="fa fa-envelope fa-fw"></i> Email: <a href="mailto:{{site.contact.email}}">{{site.contact.email}}</a>
+            <li><i class="fa fa-envelope fa-fw"></i> Email: {{site.contact.email}}
           </ul>
           <p>
             <em>You could use my <a href="/drewrwilson_public_key.asc">PGP public key</a> to encrypt your messages.</em>
