--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 <div class="tagline">
-  <p>My name is Drew. I'm a public interest computer scientists. I'm passionate about <strong>social change</strong>. I <strong>make things</strong> that are <strong>digital</strong>, <strong>physical</strong>, and <strong>social</strong>.</p>
+  <p>My name is Drew. I'm a public interest computer scientist. I'm passionate about <strong>social change</strong>. I <strong>make things</strong> that are <strong>digital</strong>, <strong>physical</strong>, and <strong>social</strong>.</p>
 </div>
 
 <!--
