fix https load error

--- a/cfa-display/index.html
+++ b/cfa-display/index.html
@@ -68,7 +68,8 @@
 								<p class="lead">This is a step-by-step guide on making a nice looking tabletop display for using when representing your Code for America Brigade at events. It's also a great way to get introduced to using a ShopBot, which is a CNC-controlled router.
 									<div class="text-center">
 										<div class="video-container">
-													         <iframe src="http://www.youtube.com/embed/tU0rxThKxSE?rel=0" frameborder="0" width="560" height="315"></iframe>
+                                   <iframe width="560" height="315" src="https://www.youtube.com/embed/tU0rxThKxSE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
 
 													</div>
 									<br />
