fix https links #2

--- a/cfa-display/index.html
+++ b/cfa-display/index.html
@@ -14,13 +14,13 @@
 
     <!-- Custom Google Web Font -->
     <link href="//cdnjs.cloudflare.com/ajax/libs/font-awesome/4.0.3/css/font-awesome.min.css" rel="stylesheet">
-    <link href='http://fonts.googleapis.com/css?family=Lato:100,300,400,700,900,100italic,300italic,400italic,700italic,900italic' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Lato:100,300,400,700,900,100italic,300italic,400italic,700italic,900italic' rel='stylesheet' type='text/css'>
 
     <!-- Add custom CSS here -->
     <link href="./css/howto-page.css" rel="stylesheet">
     <style type="text/css" media="screen">
       .intro-header {
-        background: url('http://drewrwilson.com/cfa-display/img/intro-bg.jpg') no-repeat center center;
+        background: url('https://drewrwilson.com/cfa-display/img/intro-bg.jpg') no-repeat center center;
         background-size:cover;
       }
       .banner  {
@@ -44,8 +44,8 @@
                         <h1>Code for America Tabletop Display</h1>
                         <h3>A DIY Guide for Brigade Members & Superfans</h3>
                         <hr class="intro-divider">
-												<h4>Made by: Drew<a href="http://twitter.com/drewSaysGoVeg"><i class="fa fa-twitter fa-fw"></i></a> and &nbsp; Paul<a href="http://twitter.com/pktck"><i class="fa fa-twitter fa-fw"></i></a>  </h4>
-												<h4>Video made by: Drew<a href="http://twitter.com/drewSaysGoVeg"><i class="fa fa-twitter fa-fw"></i></a> and &nbsp; Molly<a href="http://twitter.com/mollyampersand"><i class="fa fa-twitter fa-fw"></i></a> and Jason<a href="http://twitter.com/_jden"><i class="fa fa-twitter fa-fw"></i></a></h4>
+												<h4>Made by: Drew<a href="https://twitter.com/drewSaysGoVeg"><i class="fa fa-twitter fa-fw"></i></a> and &nbsp; Paul<a href="https://twitter.com/pktck"><i class="fa fa-twitter fa-fw"></i></a>  </h4>
+												<h4>Video made by: Drew<a href="https://twitter.com/drewSaysGoVeg"><i class="fa fa-twitter fa-fw"></i></a> and &nbsp; Molly<a href="https://twitter.com/mollyampersand"><i class="fa fa-twitter fa-fw"></i></a> and Jason<a href="https://twitter.com/_jden"><i class="fa fa-twitter fa-fw"></i></a></h4>
                     </div>
                 </div>
             </div>
@@ -73,7 +73,7 @@
 
 													</div>
 									<br />
-									<a href="http://youtu.be/tU0rxThKxSE" class="btn btn-default btn-lg"><i class="fa fa-youtube fa-fw"></i> <span class="network-name">Watch this on YouTube</span></a>
+									<a href="https://youtu.be/tU0rxThKxSE" class="btn btn-default btn-lg"><i class="fa fa-youtube fa-fw"></i> <span class="network-name">Watch this on YouTube</span></a>
 									</div>
 
 							</div>
